--- a/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
+++ b/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
@@ -130,7 +130,7 @@
             commandManager = workbook.commandManager();
 
             // SpreadJS doesn't have a unified way to detect when the spreadsheet is modified, but as all
-            // modifications are performed via command system we can just listen for any executing commands and
+            // modifications are performed via the command system we can just listen for any executing commands and
             // assume that the data has changed.
             // https://developer.mescius.com/forums/spreadjs/how-to-detect-if-there-is-any-modification-in-spreadjs
             commandManager.addListener('appListener', (args) => {
@@ -140,7 +140,7 @@
 
         window.onload = function () {
 
-            //Apply License
+            // Apply license keys
             GC.Spread.Sheets.LicenseKey = SPREAD_JS_LICENSE_KEY;
             GC.Spread.Sheets.Designer.LicenseKey = SPREAD_JS_DESIGNER_LICENSE_KEY;
 
