--- a/Celbridge/Workspace/Celbridge.Console/Assets/Terminal/index.html
+++ b/Celbridge/Workspace/Celbridge.Console/Assets/Terminal/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>Xterm</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm/css/xterm.css">
-    <script src="https://cdn.jsdelivr.net/npm/xterm/lib/xterm.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xterm/xterm@5.5.0/css/xterm.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/@xterm/xterm@5.5.0/lib/xterm.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@xterm/addon-fit@0.10.0/lib/addon-fit.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@xterm/addon-clipboard@0.1.0/lib/addon-clipboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@xterm/addon-web-links@0.11.0/lib/addon-web-links.js"></script>
 
     <style>
         html, body {
@@ -54,17 +57,62 @@
         };
 
         const term = new Terminal({
-            theme: campbellTheme
+            theme: campbellTheme,
+            windowsPty: {
+                backend: 'conpty'
+            }
         });
 
         const fitAddon = new FitAddon.FitAddon();
         term.loadAddon(fitAddon);
 
+        const clipboardAddon = new ClipboardAddon.ClipboardAddon();
+        term.loadAddon(clipboardAddon);
+
+        const webLinksAddon = new WebLinksAddon.WebLinksAddon();
+        term.loadAddon(webLinksAddon);
+
         term.open(document.getElementById('terminal'));
-        fitAddon.fit();
 
         window.addEventListener('resize', () => {
             fitAddon.fit();
+        });
+
+        term.onResize(({ cols, rows }) => {
+            console.log(`Terminal now ${cols} cols by ${rows} rows`);
+
+            // Notify console host that the terminal has resized
+            data = `console_size,${cols},${rows}`
+            window.chrome.webview.postMessage(data);
+        });
+
+        fitAddon.fit();
+
+        term.attachCustomKeyEventHandler((ev) => {
+
+            // Copy: if there’s a selection, ctl-c copies it to the clipboard
+            if ((ev.ctrlKey || ev.metaKey) && ev.key.toLowerCase() === 'c') {
+                if (term.hasSelection()) {
+                    navigator.clipboard.writeText(term.getSelection());
+                    ev.preventDefault?.();
+                    return false; // consume the event
+                }
+                return true; // no selection, ctrl-c clears the input buffer
+            }
+
+            // Paste: ctrl+v pastes clipboard into the terminal
+            if ((ev.ctrlKey || ev.metaKey) && ev.key.toLowerCase() === 'v') {
+                navigator.clipboard.readText().then(text => term.paste(text));
+                ev.preventDefault?.();
+                return false;  // consume the event
+            }
+
+            // No exit: Block Ctrl+D and Ctrl+Z (Windows EOF)
+            if (ev.ctrlKey && (ev.key === 'd' || ev.key === 'z')) {
+                return false;
+            }
+
+            return true;
         });
 
         // Send terminal input to host
@@ -72,7 +120,7 @@
             window.chrome.webview.postMessage(data);
         });
 
-        // Receive data from host and write to terminal
+        // Receive data from host and write it to the terminal
         window.chrome.webview.addEventListener('message', event => {
             const data = event.data;
             if (typeof data === "string") {
