--- a/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
+++ b/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
@@ -6,34 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Celbridge Spreadsheet</title>
 
-    <!-- Mescius CDN styles -->
-    <link rel="stylesheet" href="https://cdn.mescius.com/spreadjs/hosted/css/gc.spread.sheets.excel2013white.18.1.4.css" />
-    <link rel="stylesheet" href="https://cdn.mescius.com/spreadjs/hosted/css/gc.spread.sheets.designer.18.1.4.min.css" />
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="lib/spreadjs/css/gc.spread.sheets.excel2013white.18.1.4.css" />
+    <link rel="stylesheet" href="lib/designer/css/gc.spread.sheets.designer.18.1.4.min.css" />
 </head>
 
 <body unselectable="on">
     <div id="gc-designer-container" role="application" style="width:100%; height:100vh;"></div>
 
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/gc.spread.sheets.all.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.shapes.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.charts.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.datacharts.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.slicers.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.print.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.barcode.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.pdf.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.pivot.pivottables.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.tablesheet.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.ganttsheet.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.formulapanel.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.report.reportsheet.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/plugins/gc.spread.sheets.io.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/gc.spread.sheets.all.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.shapes.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.charts.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.datacharts.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.slicers.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.print.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.barcode.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.pdf.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.pivot.pivottables.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.tablesheet.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.ganttsheet.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.formulapanel.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.report.reportsheet.18.1.4.min.js"></script>
+    <script src="lib/spreadjs/scripts/plugins/gc.spread.sheets.io.18.1.4.min.js"></script>
 
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/gc.spread.sheets.designer.resource.en.18.1.4.min.js"></script>
-    <script src="https://cdn.mescius.com/spreadjs/hosted/scripts/gc.spread.sheets.designer.all.18.1.4.min.js"></script>
+    <script src="lib/designer/scripts/gc.spread.sheets.designer.resource.en.18.1.4.min.js"></script>
+    <script src="lib/designer/scripts/gc.spread.sheets.designer.all.18.1.4.min.js"></script>
 
-    <script src="https://celbridge-app-static-files.celbridge.org/libs/spreadjs/license.js"></script>
+    <script src="lib/license.js"></script>
 
     <script>
         function listenForWebViewMessages() {
