Change error page to link to the mescius.com URL

--- a/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/error.html
+++ b/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/error.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Excel Editor Unavailable</h1>
-    <p>The Excel editor is not available because it uses <a href="https://www.mescius.eu/en/spreadjs">SpreadJS</a> which is a commercial product that requires a valid license.</p>
+    <p>The Excel editor is not available because it uses <a href="https://developer.mescius.com/spreadjs">SpreadJS</a> which is a commercial product that requires a valid license.</p>
 </body>
 </html>
