Mockup of data pipeline for an Unreal Engine project

--- a/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
+++ b/Celbridge/Workspace/Celbridge.Documents/Web/SpreadJS/index.html
@@ -181,7 +181,7 @@
             GC.Spread.Sheets.Designer.LicenseKey = SPREAD_JS_DESIGNER_LICENSE_KEY;
 
             const config = GC.Spread.Sheets.Designer.DefaultConfig;
-            delete config.fileMenu;
+            //delete config.fileMenu;
 
             // Custom save / load buttons
             // These are no longer required since I implemented auto save, but keeping the code here for future reference.
